@startuml

title __MAÝN's Class Diagram__\n

  namespace com.example.adminpanelnew {
    namespace ui.main {
      class com.example.adminpanelnew.ui.main.PageViewModel {
          - mIndex : MutableLiveData<Integer>
          + setIndex()
      }
    }
  }
  

  namespace com.example.adminpanelnew {
    namespace ui.main {
      class com.example.adminpanelnew.ui.main.PlaceholderFragment {
          {static} - ARG_SECTION_NUMBER : String
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.adminpanelnew {
    namespace ui.main {
      class com.example.adminpanelnew.ui.main.SectionsPagerAdapter {
          {static} - TAB_TITLES : int[]
          - mContext : Context
          + SectionsPagerAdapter()
          + getCount()
          + getItem()
          + getPageTitle()
      }
    }
  }
  

  com.example.adminpanelnew.ui.main.PageViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.adminpanelnew.ui.main.PlaceholderFragment -up-|> androidx.fragment.app.Fragment
  com.example.adminpanelnew.ui.main.PlaceholderFragment o-- com.example.adminpanelnew.ui.main.PageViewModel : pageViewModel
  com.example.adminpanelnew.ui.main.SectionsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.example.adminpanelnew.ui.main.SectionsPagerAdapter o-- com.example.adminpanelnew.CustomerManagement : customerManagement
  com.example.adminpanelnew.ui.main.SectionsPagerAdapter o-- com.example.adminpanelnew.Information : information
  com.example.adminpanelnew.ui.main.SectionsPagerAdapter o-- com.example.adminpanelnew.TrainManagement : trainManagement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
